edited FileLogHandler