@@ -8,7 +8,8 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 
-//own import
+//own imports
+import ch.nolix.common.exception.WrapperException;
 import ch.nolix.common.nolixenvironment.NolixEnvironment;
 
 //class
@@ -17,10 +18,13 @@ public final class FileLogHandler extends LogHandler {
 	//constant
 	public static final String NOLIX_LOG_FILE_NAME = "Log.txt";
 	
+	//constant
+	private static final char FOLDER_DELIMITER = '/';
+	
 	//static method
 	public static String getLocalNolixLogFilePath() {
 		
-		final var localNolixFilePath = NolixEnvironment.getLocalNolixFolderPath() + "/" + NOLIX_LOG_FILE_NAME;
+		final var localNolixFilePath = NolixEnvironment.getLocalNolixFolderPath() + FOLDER_DELIMITER + NOLIX_LOG_FILE_NAME;
 		createFileIfDoesNotExist(localNolixFilePath);
 		
 		return localNolixFilePath;
@@ -34,8 +38,9 @@ public final class FileLogHandler extends LogHandler {
 		if (!Files.exists(lPath)) {
 			try {
 				Files.createFile(lPath);
-			}
-			catch (final IOException pIOException) {}	
+			} catch (final IOException pIOException) {
+				throw new WrapperException(pIOException);
+			}	
 		}
 	}
 	
@@ -43,12 +48,13 @@ public final class FileLogHandler extends LogHandler {
 	@Override
 	protected void log(final LogEntry logEntry) {
 		try {
-			Files.write(
+			Files.writeString(
 				Paths.get(getLocalNolixLogFilePath()),
-				(logEntry.toString() + System.lineSeparator()).getBytes(),
+				logEntry.toString() + System.lineSeparator(),
 				StandardOpenOption.APPEND
 			);
-		}
-		catch (final IOException pIOException) {}	
+		} catch (final IOException pIOException) {
+			throw new WrapperException(pIOException);
+		}	
 	}
 }
